---------------------------------------------------------------------------------------------------
Version: 1.17.0
Date: 2022-11-15

  Graphics:
    - Updated graphics. Sprites no longer have unintended holes and black borders.
    - Changed map color of the race to orange.

---------------------------------------------------------------------------------------------------
Version: 1.16.2
Date: 2022-07-10

  Changes:
    - Improve unit performance by changing enemies distraction_cooldown from 20 to 300.

---------------------------------------------------------------------------------------------------
Version: 1.16.1
Date: 2022-06-22

  Changes:
    - Added support to set neutral for neutral forces that created from other mods.
    - changed {'mutalisk', 'queen'} spawn ratio from {3,1} to {8,1}
    - changed {'mutalisk', 'overlord'} spawn ratio from {2,1} to {5,1}
    - changed {'zergling','ultralisk','defiler'} spawn ratio from {4,2,1} to {6,3,1}
    - changed {'zergling', 'hydralisk','lurker', 'ultralisk'} spawn ratio from {2,1,1,1} to {4,2,1,1}

---------------------------------------------------------------------------------------------------
Version: 1.16.0
Date: 2022-06-06

  Features:
    - Added support for featured squad
    - Added support for elite squad
    - -- Featured Squad Details ---
    - Unit list, spawn ratio, unit attack point cost per unit
    - {{'zergling','ultralisk'}, {3, 1}, 20},
    - {{'hydralisk','lurker'}, {2, 1}, 20},
    - {{'zergling', 'infested', 'ultralisk'}, {3, 4, 1}, 15},
    - {{'zergling','ultralisk','defiler'}, {4, 2, 1}, 22.5},
    - {{'zergling', 'hydralisk','lurker', 'ultralisk'}, {2, 1, 1, 1}, 20},
    - -- / Featured Squad Details ---
    - -- Featured Flying Squad Details ---
    - {{'mutalisk'}, {1}, 45},
    - {{'devourer', 'guardian'}, {2, 1}, 50},
    - {{'mutalisk', 'queen'}, {3, 1}, 75},
    - {{'mutalisk', 'overlord'}, {2, 1}, 50},
    - -- / Featured Flying Squad Details ---

  Changes: